src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidKeyMappingPI.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:System.Windows.Input;assembly=presentationcore">
<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  />    
</Page>
